*Load Testing:* Use k6, JMeter, or Gatling to test the system against performance targets (*1000+ requests/second*). Profile and optimize hotspots.